# Raytracer

./: .clang-format  CMakeLists.txt  README.md  gradient.ppm  main.cpp  run_clang.sh  run_gcc.sh
examples/: render_ppm.cpp
include/: camera.hpp  color.hpp  hit_record.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  material.hpp  ray.hpp  raytracer.hpp  rtweekend.hpp  sphere.hpp  timer.hpp  util.hpp  vec3.hpp  vec3_util.hpp
src/: main.cpp
tests/: CMakeLists.txt  test_color.cpp  test_ray.cpp
